feat: update swagger ui and add readme
