# src/routes/product.ts
@@ -10,14 +10,9 @@ const { validateAddProduct, validateGetProduct, validateUpdateProduct, validateD
 const { getProducts, getProductById, addProduct, updateProduct, deleteProductById } = productController
 
 router.get('/products', getProducts.bind(productController))
-router.post('/single-product', validateGetProduct, getProductById.bind(productController)
-/*  #swagger.parameters['object'] = { in: 'body', description: 'Get specific product by id', 
-    schema: { productId: '7718f2d9-610e-4571-a85f-1c5defee147a' }}
-*/
-)
-router.post('/product', authenticate, validateAddProduct, addProduct.bind(productController)
-/*  #swagger.security = { bearerAuth: { type: 'http', scheme: 'bearer' } } */
-)
+router.post('/single-product', authenticate, validateGetProduct, getProductById.bind(productController))
+
+router.post('/product', authenticate, validateAddProduct, addProduct.bind(productController))
 
 router.put('/product', authenticate, validateUpdateProduct, updateProduct.bind(productController))
 router.delete('/product', authenticate, validateDeleteProduct, deleteProductById.bind(productController))
